--- a/index.html
+++ b/index.html
@@ -13,35 +13,64 @@
 <body>
 	
 	
-	<header>
-        <h1 class="logo">Top Games</h1>
-		
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<a class="navbar-brand  text-white" href="index.html">Inicio</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				  <span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-				  <ul class="navbar-nav">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		  <div class="container-fluid">
+			<a class="navbar-brand" href="#">Top Games</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			  <div class="navbar-nav">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="#">Home</a>
+					</li>
+
+					<li class="nav-item">
+					  <a class="nav-link" aria-current="registro" href="registro.html">Registro</a>
+					</li>
+
 
 					<li class="nav-item dropdown">
-						<a class="nav-link  text-white" href="#">Categorías</a>
-						<div class="dropdown-content">
-							<a href="terror.html">Terror</a>
-							<a href="accion.html">Acción</a>
-							<a href="lucha.html">Lucha</a>
-							<a href="deporte.html">Deporte</a>
-							<a href="carreras.html">Carreras</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link  text-white" href="contacto.html">Contacto</a>
+					  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Categorias
+					  </a>
+					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<li><a class="dropdown-item" href="terror.html">Terror</a></li>
+						<li><a class="dropdown-item" href="accion.html">Accion</a></li>
+						<li><a class="dropdown-item" href="arreras.html">Carreras</a></li>
+						<li><a class="dropdown-item" href="deporte.html">Deporte</a></li>
+						<li><a class="dropdown-item" href="lucha.html">Luchas</a></li>
+					  </ul>
 					</li>
 					
-				  </ul>
-				</div>
-			  </nav>
-    </header>
+			  </ul>
+			  </div>
+			</div>
+		  </div>
+		</nav>	  
+   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+	  
+	  
+	 
+    <div class="carousel-item active">
+      <img src="https://gmedia.playstation.com/is/image/SIEPDC/diablo-iv-hero-banner-desktop-01%E2%80%93en-12dec22?$3200px$" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://gmedia.playstation.com/is/image/SIEPDC/ghost-of-tsushima-directors-cut-hero-banner-desktop-01-en-15jun21" class="d-block w-100" alt="...">
+    </div>
+ 
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
 
 
