--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					</li>
 
 					<li class="nav-item">
-					  <a class="nav-link" aria-current="registro" href="registro.html">Registro</a>
+					  <a class="nav-link" aria-current="registro" href="login.html">Registro</a>
 					</li>
 
 
